--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h2>Home</h2>
-            <p>This is the homepage of my portfolio site.</p>
+            <p>Hello, welcome to the site of my portfolio. You are able to browse my website here.</p>
         </section>
     </main>
     <footer>
