--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Welcome to the Portfolio of Atif Khan</h1>
         <nav>
             <ul>
                 <li><a href="about.html">About Me</a></li>
@@ -18,10 +18,8 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Home</h2>
-            <p>Hello, welcome to the site of my portfolio. You are able to browse my website here.</p>
-        </section>
+        <h2>Home</h2>
+        <p>Hello, welcome to the site of my portfolio. You are able to browse my website here.</p>
     </main>
     <footer>
         <p>&copy; 2024 My Portfolio | <a href="mailto:Atif.khan@ontariotechu.net">Atif.khan@ontariotechu.net</a></p>
