--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title> Atif Khans Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
         <p>Hello, welcome to the site of my portfolio. You are able to browse my website here.</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Portfolio | <a href="mailto:Atif.khan@ontariotechu.net">Atif.khan@ontariotechu.net</a></p>
+        <p>&copy; 2024 Atif's Portfolio | <a href="mailto:Atif.khan@ontariotechu.net">Atif.khan@ontariotechu.net</a></p>
     </footer>
 </body>
 </html>
