--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,15 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Project 1: Python Assignment</h2>
-            <p>In my first year programming course we had to create a game using Python. If I remember correctly i created a card game through code although It was very basic. I learned a little about coding through this experience.</p>
+        <h2>Project 1: Python Assignment</h2>
+        <p>In my first year programming course we had to create a game using Python. If I remember correctly i created a card game through code although It was very basic. I learned a little about coding through this experience.</p>
 
             <h2>Project 2: Discrete Math assignment</h2>
             <p>I worked a discrete math assignment related to logics and proofs. I found it easier compared to calculus in high school.</p>
-        </section>
+       
     </main>
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+        <p>&copy; 2024 Atif's Portfolio</p>
     </footer>
 </body>
 </html>
