--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact Me</h1>
+        <h1>Contact Me Here</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -33,7 +33,7 @@
                 <textarea id="message" name="message" required></textarea><br><br>
 
                 <label for="Human verication">What is 5+5?:<label><br>
-                <textarea id="Human verication" name="What is 5+5?" required></textarea><br><br>
+                <input type="text" id="Human verication" name="Human Verication" required><br><br> 
 
                 <input type="submit" value="Send">
             </form>
